--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     </div>
 
 <footer class="footer">
-    <p>© 2025 Todos os direitos reservados. Desenvolvido por <span>@kayo</span></p>
+    <p><span>@kayo</span></p>
 </footer>
 
 
     <div class="aniversario-banner">
-        <h1>🎉 FELIZ ANIVERSÁRIO! 🎂🥳</h1>
+        <h1>🎉 FELIZ ANIVERSÁRIO!❤️🎂🥳</h1>
     </div>
 
     <div class="album-container">
@@ -185,7 +185,7 @@
                     <div class="hover-overlay"></div>
                 </div>
                 <div class="photo-back">
-                    <iframe style="border-radius:12px; display:block; margin: 0 auto;" src="https://open.spotify.com/embed/track/4gjjWs6nwNLpMRYMa4Z2DZ?si=46cf3b4a36e2486d" width="100%" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                    <iframe style="border-radius:12px; display:block; margin: 0 auto;" src="https://open.spotify.com/embed/track/3mvxzZMilAxpUnBFzwYZZ8?si=09708ccdb0cc42a6" width="100%" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
                 </div>
             </div>
         </div>
@@ -197,7 +197,7 @@
                     <div class="hover-overlay"></div>
                 </div>
                 <div class="photo-back">
-                    <iframe style="border-radius:12px; display:block; margin: 0 auto;" src="https://open.spotify.com/embed/track/2OZJVBsQEKq3euEKzvl4qV?si=a3926362c76a4752" width="100%" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                    <iframe style="border-radius:12px; display:block; margin: 0 auto;" src="https://open.spotify.com/embed/track/4yJh0SzQM2pO5P44PV4Cc8?si=cc2dbb5def954562" width="100%" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
                 </div>
             </div>
         </div>
